--- a/templates/public/landing.html
+++ b/templates/public/landing.html
@@ -17,7 +17,7 @@
                     
                     <div class="system-description mb-4">
                         <p class="lead">
-                            Access your car wash business dashboard
+                            Access your car Care business dashboard
                         </p>
                     </div>
                     
