--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -29,8 +29,14 @@
                         <span class="nav-text">Dashboard</span>
                     </a>
                 </li>
-                
-           
+                <!-- Service Queue -->
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'service_queue' %}active{% endif %}" 
+                       href="/business/{{ request.tenant.slug }}/services/queue/">
+                        <i class="nav-icon fas fa-list"></i>
+                        <span class="nav-text">Service Queue</span>
+                    </a>
+                </li>
             </ul>
         </div>
         {% endif %}
@@ -48,6 +54,7 @@
                     </a>
                 </li>
                 
+                
              
             </ul>
         </div>
@@ -62,7 +69,7 @@
                 <li class="nav-item nav-dropdown" id="services-dropdown">
                     <a class="nav-link nav-dropdown-toggle {% if 'services' in request.resolver_match.namespace %}active{% endif %}" 
                        href="#" onclick="toggleDropdown('services-dropdown')">
-                        <i class="nav-icon fas fa-car-wash"></i>
+                        <i class="nav-icon fas fa-cogs"></i>
                         <span class="nav-text">Services</span>
                         {% if pending_orders_count > 0 %}
                         <span class="nav-badge nav-badge-warning">{{ pending_orders_count }}</span>
