--- a/templates/expenses/expense_detail.html
+++ b/templates/expenses/expense_detail.html
@@ -52,7 +52,7 @@
                     <i class="fas fa-print"></i> Print Details
                 </a></li>
                 <li><a class="dropdown-item text-danger" 
-                       href="{% url 'expenses:delete' expense.pk %}"
+                       href="/business/{{ request.tenant.slug }}/expenses/{{ expense.pk }}/delete/"
                        onclick="return confirm('Are you sure you want to delete this expense?')">
                     <i class="fas fa-trash"></i> Delete
                 </a></li>
@@ -103,7 +103,7 @@
                                 <label class="detail-label">Vendor</label>
                                 <div class="detail-value">
                                     {% if expense.vendor %}
-                                    <a href="{% url 'expenses:vendor_detail' expense.vendor.pk %}">
+                                    <a href="/business/{{ request.tenant.slug }}/vendors/{{ expense.vendor.pk }}/">
                                         {{ expense.vendor.name }}
                                     </a>
                                     {% else %}
@@ -366,7 +366,7 @@
             <div class="card-body">
                 <div class="vendor-info">
                     <h6 class="vendor-name">
-                        <a href="{% url 'expenses:vendor_detail' expense.vendor.pk %}">
+                        <a href="/business/{{ request.tenant.slug }}/vendors/{{ expense.vendor.pk }}/">
                             {{ expense.vendor.name }}
                         </a>
                     </h6>
@@ -403,25 +403,25 @@
             </div>
             <div class="card-body">
                 <div class="related-actions">
-                    <a href="{% url 'expenses:create' %}?category={{ expense.category.pk }}" 
+                    <a href="/business/{{ request.tenant.slug }}/expenses/create/?category={{ expense.category.pk }}" 
                        class="action-link">
                         <i class="fas fa-plus"></i>
                         Add Similar Expense
                     </a>
                     {% if expense.vendor %}
-                    <a href="{% url 'expenses:list' %}?vendor={{ expense.vendor.pk }}" 
+                    <a href="/business/{{ request.tenant.slug }}/expenses/?vendor={{ expense.vendor.pk }}" 
                        class="action-link">
                         <i class="fas fa-search"></i>
                         View Vendor Expenses
                     </a>
                     {% endif %}
-                    <a href="{% url 'expenses:list' %}?category={{ expense.category.pk }}" 
+                    <a href="/business/{{ request.tenant.slug }}/expenses/?category={{ expense.category.pk }}" 
                        class="action-link">
                         <i class="fas fa-tags"></i>
                         View Category Expenses
                     </a>
                     {% if expense.is_recurring %}
-                    <a href="{% url 'expenses:recurring_list' %}" 
+                    <a href="/business/{{ request.tenant.slug }}/expenses/{{ expense.pk }}/recurring/" 
                        class="action-link">
                         <i class="fas fa-redo"></i>
                         Manage Recurring
@@ -484,7 +484,7 @@
                 <h5 class="modal-title">Approve/Reject Expense</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <form method="post" action="{% url 'expenses:approve' expense.pk %}">
+            <form method="post" action="/business/{{ request.tenant.slug }}/expenses/{{ expense.pk }}/approve/">
                 {% csrf_token %}
                 <div class="modal-body">
                     <div class="mb-3">
