--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -617,27 +617,21 @@
                         
                         <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'sales' and 'reports' in request.resolver_match.namespace %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/reports/sales/">
+                               href="/business/{{ request.tenant.slug }}/reports/analytics/">
                                 <i class="nav-icon fas fa-chart-line"></i>
-                                <span class="nav-text">Sales Reports</span>
+                                <span class="nav-text">Analytics</span>
                             </a>
                         </li>
                         
                         <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'financial' and 'reports' in request.resolver_match.namespace %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/reports/financial/">
+                               href="/business/{{ request.tenant.slug }}/reports/list/">
                                 <i class="nav-icon fas fa-dollar-sign"></i>
-                                <span class="nav-text">Financial Reports</span>
+                                <span class="nav-text">Report List</span>
                             </a>
                         </li>
                         
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.url_name == 'customer' and 'reports' in request.resolver_match.namespace %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/reports/customer/">
-                                <i class="nav-icon fas fa-users"></i>
-                                <span class="nav-text">Customer Reports</span>
-                            </a>
-                        </li>
+                      
                     </ul>
                 </li>
             </ul>
